language/move-lang/tests/move_check/typing/borrow_local_temp_resource.exp
error: 

   ┌── tests/move_check/typing/borrow_local_temp_resource.move:6:10 ───
   │
 6 │         &R{};
   │          --- The resource is created but not used. The resource must be consumed before the function returns
 7 │         &mut R{};
   │                 ^ Invalid return
   │

error: 

   ┌── tests/move_check/typing/borrow_local_temp_resource.move:7:14 ───
   │
 7 │         &mut R{};
   │              --- The resource is created but not used. The resource must be consumed before the function returns
   │                 ^ Invalid return
   │

